# runtrack-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
src/: day1.cpp  day1.hpp  main.cpp  main.hpp
src/day1/: day1.cpp  day1.hpp
src/day2/: aquatic.cpp  aquatic.hpp  day2.cpp  day2.hpp  penguin.cpp  penguin.hpp  terrestrial.cpp  terrestrial.hpp
